--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "npm install; npm run dev",
     "dev": "webpack-dev-server --content-base build/ --inline",
     "build": "webpack",
-    "lint": "eslint ./src/scripts/*",
+    "lint": "eslint ./src/scripts/* --fix",
     "clean": "rm -rf ./build",
     "destroy": "npm run clean; rm -rf ./node_modules",
     "publish": "npm run build; rm -rf ./docs; cp -R ./build ./docs"
@@ -24,7 +24,7 @@
     "chai": "3.5.0",
     "clean-webpack-plugin": "0.1.10",
     "copy-webpack-plugin": "0.3.3",
-    "eslint": "2.11.0",
+    "eslint": "^4.19.1",
     "eslint-config-idiomatic": "2.1.0",
     "mocha": "3.1.0",
     "sinon": "1.17.6",
