--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,8 @@
     "one-var": [2, "never"],
     "semi": [2, "always"],
     "space-before-function-paren": [1, "always"],
-    "space-in-parens": [2, "never"]
+    "space-in-parens": [2, "never"],
+    "no-console": [0]
   },
   "globals": {
     "Phaser": true,
