--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "babel-core": "6.13.2",
     "babel-loader": "6.2.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "6.13.2",
     "chai": "3.5.0",
     "clean-webpack-plugin": "0.1.10",
